# ground_surface_estimation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_thirdparty.sh
cmake/: packages.cmake
config/: config.yaml
src/: CMakeLists.txt  ground_paramters.h  ground_surface_estimation.cc  ground_surface_estimation.h  ground_surface_estimation_constant.cc  ground_surface_estimation_constant.h  ground_surface_estimation_geman_mcclure.cc  ground_surface_estimation_geman_mcclure.cpp  ground_surface_estimation_geman_mcclure.h
src/algorithm/: CMakeLists.txt  base_param.h  ceres_param.h  common_param.h  sac_param.h  surface_estimate_base.cc  surface_estimate_base.h  surface_estimate_point_to_plane.cc  surface_estimate_point_to_plane.h  surface_estimate_polynominal.cc  surface_estimate_polynominal.h  surface_estimate_sac.cc  surface_estimate_sac.h
src/common/: CMakeLists.txt  global_config.cc  global_config.h  num_types.h  point_type.h  system_common.h  yaml_io.h
src/tools/: CMakeLists.txt  ground_filter.h  timer.cc  timer.h
test/: CMakeLists.txt  ground_surface_constant_sac_test.cc  ground_surface_sac_test.cc
